refactor: remove isConstructor parameter